// protos/v1/user/user.proto
//protoc -I . --go_out . --go_opt paths=source_relative --go-grpc_out . --go-grpc_opt paths=source_relative protos/v1/region/region.proto


syntax = "proto3";

package v1.region;

import "google/protobuf/empty.proto";
import "protos/v1/common/common.proto";

option go_package = "github.com/sy-yoon/krealtors/protos/v1/region";

message Country {
    string county_id = 1;
    string name = 2;
    string currency = 3;
    bool open = 4;
    string created_date = 5;
    string updated_date = 6;
}

message Province {
    string province_id = 1;
    string name = 2;
    string country_id = 3;
    bool open = 4;
    string created_date = 5;
    string updated_date = 6;
}

message City {
    string city_id = 1;
    string name = 2;
    string province_id = 3;
    bool open = 4;
    string created_date = 5;
    string updated_date = 6;
}

service RegionService {
    rpc GetCountry(GetCountryRequest) returns (Country);
    rpc ListCountries(ListCountriesRequest) returns (ListCountriesResponse);
    rpc CreateCountry(Country) returns (Country);
    rpc UpdateCountry(Country) returns (Country);
    rpc DeleteCountry(DeleteCountryRequest) returns (google.protobuf.Empty);
    
    rpc GetProvince(GetProvinceRequest) returns (Province);
    rpc ListProvincies(ListProvinciesRequest) returns (ListProvinciesResponse);
    rpc CreateProvince(Province) returns (Province);
    rpc UpdateProvince(Province) returns (Province);
    rpc DeleteProvince(DeleteProvinceRequest) returns (google.protobuf.Empty);

    rpc GetCity(GetCityRequest) returns (City);
    rpc ListCities(ListCitiesRequest) returns (ListCitiesResponse);
    rpc CreateCity(City) returns (City);
    rpc UpdateCity(City) returns (City);
    rpc DeleteCity(DeleteCityRequest) returns (google.protobuf.Empty);
    
}

message GetCountryRequest {
    string country_id = 1;
}

message ListCountriesRequest {
    v1.common.ListParameters list_parameters = 1;
}

message ListCountriesResponse {
  repeated Country countries = 1;
}

message DeleteCountryRequest {
    string country_id = 1;
}

message GetProvinceRequest {
    string province_id = 1;
}

message ListProvinciesRequest {
    v1.common.ListParameters list_parameters = 1;
}

message ListProvinciesResponse {
  repeated Province provincies = 1;
}

message DeleteProvinceRequest {
    string province_id = 1;
}

message GetCityRequest {
    string city_id = 1;
}

message ListCitiesRequest {
    v1.common.ListParameters list_parameters = 1;
}

message ListCitiesResponse {
  repeated City cities = 1;
}

message DeleteCityRequest {
    string city_id = 1;
}
